# Quant_Strategy_Lab

./: .gitignore  AGENTS.md  README.md  SOUL.md  pyproject.toml  run_app.bat
app/: __init__.py  main.py
archive/: __init__.py  builder.py  dataset_snapshot.py  exporter.py  import_coordinator.py  importer.py  manifest.py  stager.py  verifier.py
backtest_engine/: __init__.py  metrics.py  runner.py
core/: __init__.py
data_engine/: __init__.py  normalizer.py  quality_checker.py  resampler.py
docs/: Quant_Strategy_Lab_PRD_v0_1_bak.md  agent_task_sizing_protocol_055D.md  alpha_readiness_gap_audit_259_264.md  architecture.md  archive_architecture_059A.md  archive_builder_input_contract_059F.md  archive_builder_repository_adapter_059H.md  archive_export_ui_and_roundtrip_contract_060R.md  archive_full_ui_export_boundary_design_060Y.md  archive_full_ui_export_delegation_design_060X.md  archive_full_ui_export_wiring_design_061B.md  archive_historical_records_policy_064G.md  archive_import_adapter_slice_design_059V.md  archive_import_audit_migration_plan_059S.md  archive_import_audit_schema_design_059P.md  archive_import_conflict_policy_design_059N.md  archive_import_coordinator_acceptance_test_contract_060B.md  archive_import_coordinator_acceptance_tests_design_060N.md  archive_import_coordinator_architecture_060A.md  archive_import_coordinator_first_pass_wiring_design_060L.md  archive_import_filesystem_staging_design_059Z.md  archive_import_repository_adapter_test_contract_059T.md  archive_import_repository_contract_design_059O.md  archive_importer_boundary_design_059L.md  (+148 more)
(+430 files in other folders)
