[project]
name = "quant-strategy-lab"
version = "0.4.0.dev0"
description = "Local-first desktop quant strategy generation, backtesting, validation, filtering, and reporting platform."
requires-python = ">=3.11"

dependencies = [
    "PySide6",
    "pandas",
    "numpy",
    "matplotlib",
    "pyqtgraph",
    "plotly",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
